# tsubame

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
crates/tsubame/: Cargo.toml  build.rs
crates/tsubame/src/: main.rs
examples/: axum_router.rs  config.rs  meilisearch.rs  route_service.rs  service_fn.rs  tower_service.rs
lib/: Cargo.toml  README.md
lib/src/: lib.rs
lib/src/structs/: tree.rs
lib/src/utils/: mod.rs  toml_ext.rs
main/: Cargo.toml  build.rs
main/examples/: pg_practice.rs  tokyo.rs
main/protos/: voting.proto
main/src/: config.rs  lib.rs  main.rs
main/src/internal/: grpc_server.rs  mod.rs
runtime-spec/: README.md  index.json  manifest.json
spec/runtime-spec/: config.json
src/: config.rs  lib.rs  main.rs
src/support/: mod.rs  mysql.rs
src/utils/: mod.rs  toml_ext.rs
