[package]
name = "tsubame"
version = "0.0.1"
authors = ["azusachino <azusa146@gmail.com>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/azusachino/tsubame"

[dependencies]
anyhow = "1.0.55"
axum = "0.4.8"
tokio = { version = "1.17.0", features = ["full"] }
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "any", "mysql"] }

[profile.dev]
opt-level = 0
overflow-checks = false # Disable integer overflow checks.
