[package]
name = "tsubame"
version = "0.0.1"
authors = ["azusachino <azusa146@gmail.com>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/azusachino/tsubame"

[dependencies]
anyhow = "1.0"
axum = "0.6"
dotenv = "0.15"
http = "0.2"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "any", "mysql"] }
tokio = { version = "1.25", features = ["full"] }
toml = "0.7"
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 0
overflow-checks = false # Disable integer overflow checks.
