[package]
name = "tsubame"
version = "0.0.1"
authors = ["azusachino <azusa146@gmail.com>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/azusachino/tsubame"

[dependencies]
tsubame_lib = { path = "../lib" }

anyhow = "1.0"
axum = "0.6"
dotenv = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
] }
tokio = { version = "1.23", features = ["full"] }
toml = "0.5"
tonic = "0.8"

[profile.dev]
opt-level = 0
overflow-checks = false # Disable integer overflow checks.
